# Alx_DjangoLearnLab

0x1.Introduction_ to_ Django/LibraryProject/: db.sqlite3
advanced-api-project/: Makefile  Pipfile  db.sqlite3
advanced-api-project/advanced_api_project/: settings.py  urls.py
advanced-api-project/api/: models.py  serializers.py  test_views.py  urls.py  views.py
advanced_api_project/advanced_api_project/: settings.py
advanced_api_project/api/: serializers.py
advanced_features_and_security/LibraryProject/: README.md  db.sqlite3
advanced_features_and_security/advanced_features_and_security/: settings.py
api_project/: Makefile  db.sqlite3
api_project/api/: models.py  urls.py  views.py
api_project/api_project/: settings.py
django-models/: db.sqlite3
django-models/LibraryProject/: db.sqlite3
django-models/django_models/: settings.py  urls.py
django-models/relationship_app/: forms.py  models.py  query_samples.py  urls.py  views.py
django_blog/: Makefile  pyproject.toml
django_blog/blog/: forms.py  models.py  urls.py  views.py
django_blog/django_blog/: settings.py  urls.py
social_media_api/: db.sqlite3  pyproject.toml
social_media_api/accounts/: models.py  serializers.py  urls.py  views.py
social_media_api/accounts/migrations/: 0001_initial.py  0002_alter_customuser_options.py
social_media_api/notifications/: models.py  serializers.py  views.py
social_media_api/posts/: models.py  urls.py  views.py
social_media_api/posts/migrations/: 0001_initial.py
social_media_api/social_media_api/: settings.py  urls.py
(+43 files in other folders)
